--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "sequelize": "^5.21.2",
